[package]
name = "myrello"
version = "0.3.0"
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
edition = "2018"

[dependencies]
structopt = "^0.2"
structopt-flags = "^0.2"
log = "^0.4"
env_logger = "^0.5"
rusqlite = "^0.14"
failure = "^0.1"
failure_derive = "^0.1"
dirs = "^1.0"
mkdirp = "^0.1"
chrono = "^0.4"
prettytable-rs = "^0.7"
exitfailure = "0.5"

[dev-dependencies]
proptest = "^0.6"
assert_fs = "^0.9"
assert_cmd = "^0.9"
