[package]
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
edition = "2018"
name = "myrello"
version = "0.4.0"
[dependencies]
chrono = "^0.4"
dirs = "^1.0"
env_logger = "^0.5"
exitfailure = "0.5"
failure = "^0.1"
failure_derive = "^0.1"
futures = "0.1"
log = "^0.4"
mkdirp = "^0.1"
prettytable-rs = "^0.7"
rusqlite = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "^0.2"
structopt-flags = { version = "0.3", features = ["simplelog"] }
strum = "0.15"
strum_macros = "0.15"
tokio = "0.1"

[dev-dependencies]
assert_cmd = "^0.9"
assert_fs = "^0.9"
proptest = "^0.9"
